fix: bottom toolbar jumps to top if navbar hidden #479

--- a/src/Styles/container.css
+++ b/src/Styles/container.css
@@ -59,12 +59,11 @@
                 .is-hidden-nav & {
                     margin-bottom: var(--cg-nt-tbar-bottom-margin-bottom-phone);
                 }
-                /* fix: bottom margin needs to be removed when keyboard is open on phone */
-                .is-hidden-nav.ntb-is-keyboard-open &,
-                .ntb-is-keyboard-open & {
-                    margin-bottom: unset;
-                    transition: unset;
-                }
+            }
+            /* fix: bottom margin needs to be removed when keyboard is open on phone */
+            .is-phone.ntb-is-keyboard-open & {
+                margin-bottom: unset;
+                transition: unset;
             }
         }
 
