--- a/styles.css
+++ b/styles.css
@@ -2260,12 +2260,11 @@ body.is-mobile button.cg-note-toolbar-fab[data-fab-metadata*="mgls"] {
                 .is-hidden-nav & {
                     margin-bottom: var(--cg-nt-tbar-bottom-margin-bottom-phone);
                 }
-                /* fix: bottom margin needs to be removed when keyboard is open on phone */
-                .is-hidden-nav.ntb-is-keyboard-open &,
-                .ntb-is-keyboard-open & {
-                    margin-bottom: unset;
-                    transition: unset;
-                }
+            }
+            /* fix: bottom margin needs to be removed when keyboard is open on phone */
+            .is-phone.ntb-is-keyboard-open & {
+                margin-bottom: unset;
+                transition: unset;
             }
         }
 
